Bug #25818 No return of NDB share object in failures in open method
Submitted: 24 Jan 2007 11:38 Modified: 23 May 2007 17:17
Reporter: Mikael Ronstrom
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Tomas Ulin Target Version:

[24 Jan 2007 11:38] Mikael Ronstrom
Description:
In the ha_ndbcluster::open method
the share object isn't released in all error
situations.

How to repeat:
Hard to repeat, found by code inspection

Suggested fix:
Release all resources in all error situations in ::open call
[11 Apr 2007 1:00] Hartmut Holzgraefe
I don't fully understand ... the only preliminary return
after successfull m_share allocation does free it,
not sure though whether the main code path should 
also free it on certain values of res?
[11 Apr 2007 8:18] Mikael Ronstrom
If either get_metadata or get_ndb_statistics fails the method will return an error and
keep the share
object.
[11 May 2007 1:00] Bugs System
No feedback was provided for this bug for over a month, so it is
being suspended automatically. If you are able to provide the
information that was originally requested, please do so and change
the status of the bug back to "Open".
[11 May 2007 7:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26480

ChangeSet@1.2483, 2007-05-11 08:07:42+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug#25818 No return of NDB share object in failures in open method
  - make sure resources are release properly on error
[11 May 2007 9:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26482

ChangeSet@1.2516, 2007-05-11 09:19:03+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug#25818 No return of NDB share object in failures in open method
  - correct manual/auto merge to 5.1
[23 May 2007 10:24] Bugs System
Pushed into 5.1.19-beta
[23 May 2007 10:24] Bugs System
Pushed into 5.0.44
[23 May 2007 17:17] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.0.44 and 5.1.19 changelogs.