Bug#25818 No return of NDB share object in failures in open method - make sure resources are release properly on error